// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When not authenticated Login Form renders a snapshot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Log In
  </h1>
  <hr />
  <br />
  <div>
    <ul
      className="validation-list"
    >
      <li
        className="error"
      >
        Email is required.
      </li>
      <li
        className="error"
      >
        Password is required.
      </li>
    </ul>
    <br />
  </div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      disabled={true}
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`When not authenticated Register Form renders a snapshot properly 1`] = `
<div>
  <h1
    className="title is-1"
  >
    Register
  </h1>
  <hr />
  <br />
  <div>
    <ul
      className="validation-list"
    >
      <li
        className="error"
      >
        Username must be greater than 5 characters.
      </li>
      <li
        className="error"
      >
        Email must be greater than 5 characters.
      </li>
      <li
        className="error"
      >
        Email must be a valid email address.
      </li>
      <li
        className="error"
      >
        Password must be greater than 10 characters.
      </li>
    </ul>
    <br />
  </div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="username"
        onChange={[Function]}
        placeholder="Enter a username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="email"
        onChange={[Function]}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <input
        className="input is-medium"
        name="password"
        onChange={[Function]}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="button is-primary is-medium is-fullwidth"
      disabled={true}
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;
